crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__basic_adder_dts.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { ModuleDefinition } from "@veryl-lang/simulator";

export interface AdderPorts {
  a: number;
  b: number;
  rst: number;
  readonly sum: number;
}

export declare const Adder: ModuleDefinition<AdderPorts>;
