crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__basic_adder_js.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.Adder = {
  __veryl_module: true,
  name: "Adder",
  source: require("fs").readFileSync(__dirname + "/../Adder.veryl", "utf-8"),
  ports: {
    a: { direction: "input", type: "logic", width: 16, is4state: true },
    b: { direction: "input", type: "logic", width: 16, is4state: true },
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    rst: { direction: "input", type: "reset", width: 1, is4state: true },
    sum: { direction: "output", type: "logic", width: 17, is4state: true },
  },
  events: ["clk"],
};
