crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__bit_type_dts.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { ModuleDefinition } from "@veryl-lang/simulator";

export interface BitModulePorts {
  data: number;
  en: number;
  readonly result: number;
}

export declare const BitModule: ModuleDefinition<BitModulePorts>;
