crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__no_clock_js.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.PureAdder = {
  __veryl_module: true,
  name: "PureAdder",
  source: require("fs").readFileSync(__dirname + "/../PureAdder.veryl", "utf-8"),
  ports: {
    a: { direction: "input", type: "logic", width: 8, is4state: true },
    b: { direction: "input", type: "logic", width: 8, is4state: true },
    sum: { direction: "output", type: "logic", width: 9, is4state: true },
  },
  events: [],
};
