crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__output_only_js.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.ConstGen = {
  __veryl_module: true,
  name: "ConstGen",
  source: require("fs").readFileSync(__dirname + "/../ConstGen.veryl", "utf-8"),
  ports: {
    val: { direction: "output", type: "logic", width: 8, is4state: true },
  },
  events: [],
};
