crates/simulator-ts-gen/src/snapshots/veryl_simulator_ts_gen__generator__tests__wide_port_dts.snap
---
source: crates/simulator-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { ModuleDefinition } from "@veryl-lang/simulator";

export interface WideAdderPorts {
  a: bigint;
  b: bigint;
  readonly sum: bigint;
}

export declare const WideAdder: ModuleDefinition<WideAdderPorts>;
